# gdrive-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  auth.ts  docker-compose.yml  entry.sh  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: docker-image.yml
conf/: nginx.conf
src/: gdrive.ts  index.ts  log.ts  main.rs  server.ts  test.js
