[package]
name = "auth-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
oauth2 = { version = "4.3.0", default-features = false, features = ["ureq"] }
serde = "1.0.147"
serde_json = "1.0.87"

[profile.release]
strip = true
